src/main/java/io/github/codejanovic/example/javalin/errors/BadRequest.java
package io.github.codejanovic.example.javalin.errors;

public class BadRequest extends UsecaseError {
    public BadRequest(String message) {
        super(message);
    }
}
